  util/setjmp.S: Use moveq instead of move.l when possible. (VRI)
- bdos/rwa.S: Use addq.l instead of add.l. (VRI)
- bios/aciavecs.S: Enable IKBD protocol even without ACIA hardware. (VRI)
- desk/deskpro.c desk/deskmain.c desk/desksupp.c: Code cleanup: make
  shel_write() 'isover' parameter explicitly 1 (no other value is
  supported). (RFB)
- aes/gemshlib.c: Remove PC-GEM-only stuff from shel_write(), improve
  comments. (RFB)
- aes/geminit.c aes/gemlib.h aes/gemshlib.c: Remove more PC-GEM-only
  stuff related to shel_write(). (RFB)

2015-03-30
- bdos/bdosmain.c bdos/fs.h bdos/fshand.h: Changed wrong Fdup() parameter from
  long to int. This fixes file not found issues with Steem hard disk emulation.
  Reported by Dima Sobolev. (VRI)
- aes/gemshlib.c: Remove sh_fixtail(), sh_parse(), no longer required. (RFB)
- aes/geminit.c: Remove residual PC-GEM-only code from sh_init(). (RFB)
- aes/gem.def aes/gem.rsc aes/gemshlib.c: Give the same error for a not-found
  autorun application as TOS does. (RFB)
- aes/gem.def aes/gem.rsc aes/gemshlib.c: Code cleanup: refactor sh_main()
  & sh_ldapp() for greater clarity. (RFB)

2015-04-01
- bdos/bdosmain.c: Code cleanup: replace magic numbers with #defines. (RFB)
- bdos/bdosmain.c include/config.h: Make GEMDOS_VERSION a #define. (RFB)
- bdos/bdosmain.c: Remove bogus entry (function 0x1b) from GEMDOS function
  table. (RFB)

2015-04-03
- desk/desk1.c desk/desk1.h desk/deskdir.c desk/deskmain.c: Allow folders
  being displayed in an open window to be moved/deleted, just like Atari
  TOS. (RFB)
- aes/gemfmlib.c aes/gem.def aes/gem.rsc: Remove now-unused alert. (RFB)

2015-04-04
- doc/status.txt: Update to show recent (and not-so-recent) changes in
  function support. (RFB)
- doc/status.txt: Small changes for consistency, better English. (RFB)

2015-04-06
- bios/aciavecs.S bios/amiga.c bios/amiga.h bios/amiga2.S bios/ikbd.c
  bios/ikbd.h: Add alt-arrow support (mouse actions via keyboard). (RFB)